Fix code white-space to pre-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,6 +306,7 @@ pre code {
 	font-family: Menlo, Monaco, Courier;
 	font-size: 13px;    
 	margin: 0px 10px 0 10px;
+	white-space: pre-wrap;
 }
 
 table {
